--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <div id="conteiner">
+        <button id="boton">ci</button>
     </div>
     
     <script src="index.js"></script>
